# TutorialsAndExercices

Exercices/GUI/C++/: CMakeLists.txt
Exercices/MedianFilter/: CMakeLists.txt  MedianFilter.cxx  MedianFilter.xml
Exercices/MedianFilter/Testing/: CMakeLists.txt
Exercices/Threshold/C++/: CMakeLists.txt  Threshold.cxx  Threshold.xml
Exercices/Threshold/C++/Testing/: CMakeLists.txt
Exercices/Threshold/C++/Testing/Data/: outputT2-200.nrrd  outputT2-30.nrrd
